update navbar heightfor fix scrollbar bug

--- a/client/src/style/_navbar.scss
+++ b/client/src/style/_navbar.scss
@@ -4,6 +4,7 @@
   background-color: $primary;
   width: 100%;
   transition: all ease-in-out 0.25s;
+  height: 30rem;
 
   &__logo {
     height: 25rem;
